--- a/style.css
+++ b/style.css
@@ -20,11 +20,9 @@ body {
 .grid_10 {
   grid-column: 2/12;
 }
-/* .row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-} */
+#form_section {
+  margin-top: 3rem;
+}
 #feedback_msg {
   display: none;
   background-color: #ff2323da;
@@ -116,4 +114,60 @@ td {
 
 .error input {
   border-color: #ff1900;
+}
+select {
+  margin: 1rem 1rem;
+  padding-left: 1rem;
+  height: 2.5rem;
+  width: 90%;
+  outline: none;
+  border: none;
+  border-radius: 3rem;
+  background-color: #fefefe;
+}
+#modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.modal {
+  background-color: #388c73;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1rem;
+  margin: 1rem;
+  width: 75%;
+  max-width: 800px;
+  height: 25%;
+  max-height: 180px;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
+  z-index: 20;
+}
+.modal p {
+  font-size: 1.25rem;
+  text-align: center;
+}
+.modal button {
+  font-weight: 600;
+  margin: 0 0.5rem;
+  padding: 0.5rem 0.75rem;
+  border: none;
+}
+#modal_buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 1.25rem;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 10;
 }
