--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 #form_section {
   margin-top: 3rem;
 }
-#feedback_msg {
+/* #feedback_msg {
   display: none;
   background-color: #ff2323da;
   padding: 1rem;
@@ -31,7 +31,22 @@ body {
   text-align: center;
   font-weight: 600;
   font-size: 1.15rem;
-  margin: 2rem 0;
+} */
+.bar {
+  padding: 10px;
+  color: #333;
+  background: #fafafa;
+  border: 1px solid #ccc;
+}
+.erroor {
+  display: none;
+  color: #ba3939;
+  background-color: #ffe0e0;
+  border: 1px solid #a33a3a;
+  padding: 1rem;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.15rem;
 }
 form div {
   width: 100%;
@@ -40,12 +55,12 @@ form div {
   padding-bottom: 1.25rem;
   background-color: #f0f2f3;
 }
-small {
+/* small {
   visibility: hidden;
 }
 .error small {
   visibility: visible;
-}
+} */
 form div label {
   display: inline-block;
   margin-bottom: 0.5rem;
@@ -108,30 +123,30 @@ td {
 .delete_btn:hover {
   background-color: #89ffe7;
 }
-.success input {
+.success div {
   border-color: #00ff6a;
 }
 
-.error input {
+.error div {
   border-color: #ff1900;
 }
 select {
-  margin: 1rem 1rem;
+  display: block;
   padding-left: 1rem;
   height: 2.5rem;
-  width: 90%;
+  width: 100%;
   outline: none;
   border: none;
   border-radius: 3rem;
   background-color: #fefefe;
 }
-#modal {
+#modal_delete {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
-.modal {
+.modal_delete {
   background-color: #388c73;
   display: flex;
   flex-direction: column;
@@ -146,11 +161,11 @@ select {
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
   z-index: 20;
 }
-.modal p {
+.modal_delete p {
   font-size: 1.25rem;
   text-align: center;
 }
-.modal button {
+.modal_delete button {
   font-weight: 600;
   margin: 0 0.5rem;
   padding: 0.5rem 0.75rem;
@@ -170,4 +185,87 @@ select {
   background-color: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(3px);
   z-index: 10;
+}
+#modal_submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.modal_submit {
+  background-color: #388c73;
+  width: 50%;
+  max-width: 35rem;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
+  z-index: 20;
+}
+.modal_submit h2 {
+  margin-bottom: 0.5rem;
+}
+.modal_submit p {
+  display: block;
+}
+@media (max-width: 1000px) {
+  table {
+    font-size: 0.8rem;
+  }
+  table * {
+    padding: 0;
+  }
+  .delete_btn,
+  .modify_btn {
+    padding: 0.4rem 0.25rem;
+    margin: 0.35rem;
+    display: block;
+  }
+}
+@media (max-width: 800px) {
+  table {
+    font-size: 0.75rem;
+  }
+  table * {
+    padding: 0;
+  }
+  .delete_btn,
+  .modify_btn {
+    padding: 0.25rem;
+    margin: 0.25rem;
+    display: block;
+  }
+}
+@media (max-width: 600px) {
+  table {
+    font-size: 0.55rem;
+  }
+  table * {
+    padding: 0;
+  }
+  .delete_btn,
+  .modify_btn {
+    padding: 0.35rem;
+    margin: 0.25rem;
+    display: block;
+  }
+}
+
+@media (max-width: 400px) {
+  table {
+    font-size: 0.5rem;
+  }
+  table * {
+    padding: 0;
+  }
+  .delete_btn,
+  .modify_btn {
+    padding: 0.25rem;
+    margin: 0.25rem;
+    display: block;
+    border-radius: 8%;
+  }
 }
