--- a/style.css
+++ b/style.css
@@ -142,14 +142,22 @@ select {
   background-color: #fefefe;
 }
 .modal {
-  border-radius: 8px;
+  background-color: #388c73;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 11;
-  background-color: #388c73;
   padding: 2rem 3rem;
+  border-radius: 8px;
+  z-index: 11;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 75%;
+  max-width: 800px;
+  height: 25%;
+  max-height: 180px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
 }
 #modal_delete {
   display: flex;
@@ -157,26 +165,11 @@ select {
   align-items: center;
   height: 100vh;
 }
-.modal_delete {
-  background-color: #388c73;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 1rem;
-  margin: 1rem;
-  width: 75%;
-  max-width: 800px;
-  height: 25%;
-  max-height: 180px;
-  border-radius: 5px;
-  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
-  z-index: 20;
-}
-.modal_delete p {
+.modal p {
   font-size: 1.25rem;
   text-align: center;
 }
-.modal_delete button {
+.modal button {
   font-weight: 600;
   margin: 0 0.5rem;
   padding: 0.5rem 0.75rem;
